 Bug 465934 -  ASSERTION: Trying to re-bind content from native anonymous subtree to non-native anonymous parent, r+sr=sicking